force-app/main/default/objects/Tax_Filing_Deadline__mdt/Tax_Filing_Deadline__mdt.object-meta.xml
<CustomObject>
    <description>This custom metadata type will store tax filing deadline for both Person &amp; Business.</description>
    <label>Tax Filing Deadline</label>
    <pluralLabel>Tax Filing Deadline</pluralLabel>
</CustomObject>