force-app/main/default/objects/Tax_Filing_Deadline__mdt/fields/Business_Tax_Filing_Deadline_SMS_Date__c.field-meta.xml
<CustomField>
    <fullName>Business_Tax_Filing_Deadline_SMS_Date__c</fullName>
    <description>Last Friday before Business Tax Filing Deadline</description>
    <label>Business Tax Filing Deadline SMS Date</label>
    <type>DateTime</type>
</CustomField>