force-app/main/default/objects/Tax_Filing_Deadline__mdt/fields/Business_Tax_Message__c.field-meta.xml
<CustomField>
    <fullName>Business_Tax_Message__c</fullName>
    <label>Business Tax Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>