force-app/main/default/objects/Tax_Filing_Deadline__mdt/fields/Personal_Tax_Filing_Deadline_SMS_Date__c.field-meta.xml
<CustomField>
    <fullName>Personal_Tax_Filing_Deadline_SMS_Date__c</fullName>
    <description>Last Friday before Personal Tax Filing Deadline</description>
    <label>Personal Tax Filing Deadline SMS Date</label>
    <type>DateTime</type>
</CustomField>