force-app/main/default/objects/Tax_Filing_Deadline__mdt/fields/Personal_Text_Message__c.field-meta.xml
<CustomField>
    <fullName>Personal_Text_Message__c</fullName>
    <label>Personal Text Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>